# webgenie

./: .env  .env.choreo  .env.local  .env.production  ARCHITECTURE_DIAGRAMS.md  CHECKLIST.md  CHOREO_DEPLOYMENT.md  CHOREO_QUICK_START.md  COMPLETION_SUMMARY.md  Dockerfile  FILE_MANIFEST.md  INTEGRATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README_INTEGRATION.md  START_HERE.md  choreo-frontend.yaml  choreo.yaml  docker-compose.yml  quick-start.sh
scripts/: init-db.sql
webgenie-backend/: .env  .env.example  Dockerfile  FILE_MANIFEST.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  QUICK_START.md  README.md  TRANSFORMATION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup-dev.sh
webgenie-backend/.choreo/: config.yaml
webgenie-backend/app/: __init__.py  main.py
webgenie-backend/app/api/: __init__.py  algorithms.py  datasets.py  jobs.py  results.py
webgenie-backend/app/core/: __init__.py  auth.py  config.py  logging.py  tasks.py
webgenie-backend/app/models/: __init__.py  dataset.py  job.py  result.py
webgenie-backend/app/services/: __init__.py  datasets_service.py  docker_hub_service.py  huggingface_service.py  inference_service.py  jobs_service.py
webgenie-backend/app/services/runners/: __init__.py  generic_runner.py  utils.py
webgenie-backend/app/workers/: __init__.py  tasks.py
webgenie-backend/tests/: __init__.py  conftest.py  test_api.py
webgenie-frontend/: Dockerfile  README.md  default.conf  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
webgenie-frontend/.choreo/: component.yaml  config.yaml
webgenie-frontend/presentations/: performance_metrics.csv
webgenie-frontend/src/app/: App copy.tsx  App.tsx
webgenie-frontend/src/app/components/: DatasetDetailModal.tsx  KPICard.tsx  Navigation copy 2.tsx  Navigation copy.tsx  Navigation.tsx  ThemeProvider.tsx  mockData.ts  types.ts
webgenie-frontend/src/app/pages/: ActivityPreview.tsx  AnimatedCounter.tsx  Badge.tsx  Button.tsx  Compare copy 2.tsx  Compare copy 3.tsx  Compare copy.tsx  Compare.tsx  Dashboard.tsx  DataTable.tsx  DatasetCard.tsx  Footer.tsx  (+16 more)
webgenie-frontend/src/hooks/: useApi.ts
webgenie-frontend/src/services/: api.ts
webgenie-frontend/src/styles/: index.css  theme.css
